--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,28 @@
 click==8.1.3
+cloudpickle==2.2.0
 Flask==2.2.2
 Flask-SQLAlchemy==3.0.2
 importlib-metadata==5.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+joblib==1.2.0
+llvmlite==0.39.1
 MarkupSafe==2.1.1
+numba==0.56.4
 numpy==1.23.5
+packaging==22.0
 pandas==1.5.2
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 pytz==2022.6
+scikit-learn==1.2.0
+scipy==1.9.3
+shap==0.41.0
 six==1.16.0
+slicer==0.0.7
 SQLAlchemy==1.4.44
+threadpoolctl==3.1.0
+tqdm==4.64.1
 Werkzeug==2.2.2
+xgboost==1.7.1
 zipp==3.10.0
