--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,25 @@
 click==8.1.3
 cloudpickle==2.2.0
+contourpy==1.0.6
+cycler==0.11.0
 Flask==2.2.2
 Flask-SQLAlchemy==3.0.2
+fonttools==4.38.0
+gunicorn==20.1.0
 importlib-metadata==5.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.2.0
+kiwisolver==1.4.4
 llvmlite==0.39.1
 MarkupSafe==2.1.1
+matplotlib==3.6.2
 numba==0.56.4
 numpy==1.23.5
 packaging==22.0
 pandas==1.5.2
+Pillow==9.3.0
+pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 pytz==2022.6
